--- a/ui/Reduction.ui
+++ b/ui/Reduction.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Delete with same</string>
+      <string>Reduce with same</string>
      </property>
     </widget>
    </item>
